[package]
name = "post"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
axum = "0.7"
chrono = { version = "0.4.42", features = ["serde"] }
config = { path = "../../libs/config" }
custom_headers = { path = "../../libs/custom_headers" }
easy_db = { path = "../../libs/easy_db" }
easy_errors = { path = "../../libs/easy_errors" }
http = "1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
slugify = "0.1.0"
sqlx = { version = "0.9.0-alpha.1", features = ["postgres", "runtime-tokio", "macros", "uuid", "chrono", "migrate", "tls-native-tls"] }
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros"] }
