[package]
name = "post"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
axum = "0.7"
chrono = { version = "0.4.42", features = ["serde"] }
config = { git = "https://github.com/twomice/twomice-libs.git", subdir = "config" }
custom_headers = { git = "https://github.com/twomice/twomice-libs.git", subdir = "custom_headers" }
easy_errors = { git = "https://github.com/twomice/twomice-libs.git", subdir = "easy_errors" }
http = "1"
rand = "0.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
slugify = "0.1.0"
sqlx = { version = "0.9.0-alpha.1", features = ["postgres", "runtime-tokio", "macros", "uuid", "chrono", "migrate", "tls-native-tls"] }
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros"] }
