[package]
name = "post"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
axum = "0.7"
chrono = { version = "0.4.42", features = ["serde"] }
config = { git = "https://github.com/MouseBurrow/twomice-libs.git", branch = "main" }
custom_headers = { git = "https://github.com/MouseBurrow/twomice-libs.git", branch = "main" }
easy_errors = { git = "https://github.com/MouseBurrow/twomice-libs.git", branch = "main" }
hex = "0.4"
http = "1"
tracing = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sqlx = { version = "0.9.0-alpha.1", default-features = false, features = ["postgres", "runtime-tokio", "macros", "chrono", "migrate", "tls-rustls"] }
utils = { git = "https://github.com/MouseBurrow/twomice-libs.git", branch = "main" }
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros"] }
